2025-05-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.20  Stable version.
	* configure.ac: Bump version.
	* main.c, sort.c, convert.c, fwrite.c, styfile.c,
	kana.h, {,ex}var.h, mendex.h:
	Support Brahmic (Bengali, Gurmukhi, Gujarati, Kannada,
	Lao, Malayalam, Oriya, Sinhala, Tamil and Telugu)
	scripts (experimental).
	Add options "script_head" in style file.
	https://github.com/t-tk/upmendex-package/issues/14
	* styfile.c:
	Remove deprecated keyword "tumunja" from style file.
	* fwrite.c:
	Enhance treatment of S,T comma below in Romanian.
	Support V-W ordering in Finnish traditional collation.
	* sort.c:
	Prepare to support CJK Unified Ideographs Extention J in Unicode 17.0.
	It will work with future version of ICU.
	Treat U+3192..3195, U+3280..3289, U+A830..A835 as "other number".

2025-03-07  Karl Berry  <karl@tug.org>

	* TL'25 release.

2025-02-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* convert.c, kp.{c,h}, styfile.c:
	Use kpse_find_file to find style files.
	Thanks to Yukimasa Morimi.
	* tests/upmendex.test: Add tests.
	https://github.com/texjporg/tex-jp-build/issues/175

2025-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.11  Stable version.
	* configure.ac: Bump version.
	* fread.c: Improve compatibility with makeindex.
	* styfile.c: Fix escaping of string parameters.
	Thanks to Yukimasa Morimi.
	https://github.com/texjporg/tex-jp-build/issues/173
	* tests/upmendex.test, tests/head1.ist,
	tests/tort{,W}.idx, tests/ok-tort{,2}.ind:
	Add tests for encap escape & heading_{pre,post}fix.
	* Makefile.am: Adjust.

2025-01-25  Karl Berry  <karl@freefriends.org>

	* COPYRIGHT,
	* main.c: 2025.

2024-11-09  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.10  Stable version.
	* configure.ac: Bump version.
	* {mendex,var,exvar}.h, fread.c, fwrite.c, sort.c, styfile.c:
	Support for indices with four sublevels,
	conventionally two sublevels.
	Thanks to pull request by Sergei Golovan.
	https://github.com/t-tk/upmendex-package/pull/9